--- a/resources/js/components/userProfiles/UserProfiles.css
+++ b/resources/js/components/userProfiles/UserProfiles.css
@@ -28,7 +28,7 @@ img {
     height: 303px;
 }
 
-p {
+.userCards-container p {
     font-size: 20px;
     text-align: left !important;
     margin: 0px;
