--- a/resources/js/components/userCard/UserCard.css
+++ b/resources/js/components/userCard/UserCard.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     margin: auto;
-
     width: 1000px;
 }
 
@@ -40,6 +39,63 @@
     margin: 50px;
 }
 
-p {
+info {
     margin-left: 50px;
+}
+
+@media screen and (max-width: 768px) {
+    .userCard-Container {
+        width: auto;
+    }
+
+    .userCard-Container__top {
+        display: flex;
+        margin: auto;
+        flex-direction: column;
+    }
+
+    .userCard-Container__data {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        color: #16c79a;
+        margin-left: 0;
+    }
+
+    .userCard-Container__bottom {
+        display: flex;
+        margin: auto;
+        flex-direction: column;
+
+        margin-top: 20px;
+    }
+
+    .userCard-Container__text1 {
+        margin: 10px;
+    }
+
+    .userCard-Container__text2 {
+        margin: 10px;
+    }
+
+    .userCard-Container__data h3 {
+        margin-top: 5px;
+    }
+
+    .userCard-Container__bottom h3 {
+        margin-left: 5px;
+        margin-bottom: 5px;
+    }
+
+    .userCard-Container__text1 {
+        margin: 0px;
+    }
+
+    .userCard-Container__text2 {
+        margin: 0px;
+    }
+
+    p {
+        margin-left: 0px;
+    }
 }
